# fibeger

./: .cursorrules  .env.example  .gitattributes  .gitignore  Caddyfile  Dockerfile  README.md  UNREAD_MESSAGES_FIX.md  ZUSTAND_OPTIMIZATION.md  docker-compose.yml  entrypoint.sh  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.github/: dependabot.yml
.github/workflows/: ci-deploy.yml  ci.yml
app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/components/: BrowserNotifications.tsx  CallBanner.tsx  ConfirmDialog.tsx  GroupCallOverlay.tsx  MobileHeader.tsx  Navbar.tsx  NotificationBell.tsx  Sidebar.tsx
app/feed/: page.tsx
app/friends/: page.tsx
app/groups/: page.tsx
app/hooks/: useWebRTC.ts
app/lib/: events.ts  personalityTest.json
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri/src-tauri/capabilities/: default.json
apps/tauri/src-tauri/src/: lib.rs  main.rs
backend/: .env.example  Dockerfile  go.mod  go.sum
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  OPERATIONS.md  message-notification-sound.md
fibeger/: .gitignore  ACCESSIBILITY.md  DEPLOYMENT_FLOW.md  DOCUMENTATION_INDEX.md  QUICK_FIX_VERCEL.md  README.md  START_HERE_VERCEL.md  VERCEL_DATABASE_SETUP.md  VERCEL_DEPLOYMENT_SUMMARY.md  VERCEL_SETUP_CHECKLIST.txt  WCAG_CHANGES.md  env.example  env.template  middleware.ts  package-lock.json  package.json  tsconfig.json
prisma/: schema.dev.prisma  schema.prisma  schema.production.prisma
scripts/: README.md  setup-fedora-server.sh  use-production-schema.js
types/: next-auth.d.ts
(+149 files in other folders)
