[package]
name = "fibeger"
version = "0.2.0"
description = "Fibeger - Share your moments"
authors = ["Fibeger"]
edition = "2021"

[lib]
name = "fibeger_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-http = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-upload = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-autostart = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
